# 14.OOP

./: README.md  pyproject.toml
scr/: category.py  main.py  product.py
tests/: conftest.py  test_category.py  test_product.py
