[tool.poetry]
name = "14.oop"
version = "0.1.0"
description = ""
authors = ["Polina Kigim <polinakigim@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
